Fixes misaligned list on html1 class

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -196,6 +196,30 @@ div.did-you-know
   pre.hljs + pre.hljs
     margin-top 0
 
+.full-width
+  width 100%
+
+ul.item-code-with-image
+  padding-left 0
+  list-style-type none
+
+  li
+    clear right
+    margin-bottom 1em
+
+  li > img
+    float right
+    margin-left 1em
+
+.compact-code
+  pre
+    line-height 1em
+.compact-code-more
+  @extends .compact-code
+  pre
+    font-size 75%
+
+
 // easter egg
 #easter-egg-panel
   position absolute
